--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,12 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+        maven {
+            url 'https://dl.bintray.com/kotlin/kotlin-eap'
+        }
+        maven {
+            url 'https://jitpack.io'
+        }
     }
 }
 
